test_src/compiler_errors/types/arithmetic/ModBoolError3.b
class ModBoolError3 {
    void test() {
        var value = 2;
        println(value %= true);
    }
}
